--- a/app/assets/stylesheets/base/_fonts.scss
+++ b/app/assets/stylesheets/base/_fonts.scss
@@ -5,22 +5,22 @@
 
 @font-face {
   font-family: 'bpicons';
-  src:url('/fonts/bpicons/bpicons.eot');
-  src:url('/fonts/bpicons/bpicons.eot?#iefix') format('embedded-opentype'),
-    url('/fonts/bpicons/bpicons.woff') format('woff'),
-    url('/fonts/bpicons/bpicons.ttf') format('truetype'),
-    url('/fonts/bpicons/bpicons.svg#bpicons') format('svg');
+  src:url('bpicons.eot');
+  src:url('bpicons.eot?#iefix') format('embedded-opentype'),
+    url('bpicons.woff') format('woff'),
+    url('bpicons.ttf') format('truetype'),
+    url('bpicons.svg#bpicons') format('svg');
   font-weight: normal;
   font-style: normal;
 } /* Made with http://icomoon.io/ */
 
 @font-face {
   font-family: 'fontawesome';
-  src:url('/fonts/fontawesome/fontawesome.eot?-e43dk9');
-  src:url('/fonts/fontawesome/fontawesome.eot?#iefix-e43dk9') format('embedded-opentype'),
-    url('/fonts/fontawesome/fontawesome.woff?-e43dk9') format('woff'),
-    url('/fonts/fontawesome/fontawesome.ttf?-e43dk9') format('truetype'),
-    url('/fonts/fontawesome/fontawesome.svg?-e43dk9#fontawesome') format('svg');
+  src:url('fontawesome.eot?-e43dk9');
+  src:url('fontawesome.eot?#iefix-e43dk9') format('embedded-opentype'),
+    url('fontawesome.woff?-e43dk9') format('woff'),
+    url('fontawesome.ttf?-e43dk9') format('truetype'),
+    url('fontawesome.svg?-e43dk9#fontawesome') format('svg');
   font-weight: normal;
   font-style: normal;
 } /* Made with http://icomoon.io/app */
