--- a/app/views/searches/_articles.html.erb
+++ b/app/views/searches/_articles.html.erb
@@ -1,21 +1,27 @@
 <section class="results-section articles is-active" data-total-items='1'>
   <div class="sidebar-item">
     <a class='file-type active' data-type='articles'>Articles</a>
-    <p class="file-type-count">{{totalItems}}</p>
+    <p class="file-type-count"><%= @files["Article"].size %></p>
   </div>
   <h2 class="results-section-title">Documents</h2>
   <div class="card-grid">
-    = group
-      = each model.data
-        .card-container
-          a.card.card-has-img target="_blank" href="#{OsfArchivesWeb.API_HOST}#{url}"
-            .card-figure-img
-              img src="#{OsfArchivesWeb.API_HOST}#{thumb_url}" alt=title
-            .card-content
-              h3.card-content-title
-                =title
-              h4.card-content-subtitle
-                | The Production
+    <% @files["Article"].each do |article| %>
+      <li class="card-container">
+        <a class="card card--has-img" target=_blank href=<%= sufia.download_path(article) %>>
+          <div class="card-figure-img">
+            <img src="<%= sufia.download_path(article, datastream_id: 'thumbnail') %>" alt="<%= article.title.first %>">
+          </div>
+          <div class="card-content">
+            <h3 class="card-content-title">
+              <%= article.title.first %>
+            </h3>
+            <h4 class="card-content-subtitle">
+              <%= article.production_name %>
+            </h4>
+          </div>
+        </a>
+      </li>
+    <% end %>
   </div>
   <div class="paging">
     if hasNextPage
