--- a/app/views/searches/_videos.html.erb
+++ b/app/views/searches/_videos.html.erb
@@ -1,24 +1,33 @@
 <section class="results-section videos is-active" data-total-items='1'>
   <div class="sidebar-item">
     <a class="file-type active" data-type='videos'>Videos</a>
-    <p class="file-type-count">{{totalItems}}</p>
+    <p class="file-type-count"><%= @files["Video"].size %></p>
   </div>
   <h2 class="results-section-title">Videos</h2>
   <ul class="js-videos-grid videos-grid">
-    = group
-      = each model.data
-        li.js-videos-container.card-container
-          a.js-video.card.card-has-img data-webm="#{OsfArchivesWeb.API_HOST}#{webm_url}" data-mp4="#{OsfArchivesWeb.API_HOST}#{mp4}" data-title="#{metadata.title}" data-description="#{metadata.description}" data-description="#{metadata.venue_name}"
-            .card-figure-img
-              .card-figure-img-wrapper
-                img src="#{OsfArchivesWeb.API_HOST}#{thumbnail_url}" alt=title
-            .card__content
-              h3.card__content__title
-                =metadata.title
-              h4.card__content__subtitle
-                =metadata.venue_name
-              p.card__content__date
-                =metadata.date_created
+    <% @files["Video"].each do |video| %>
+      <li class="js-video-container card-container">
+        <a class="js-video card card--has-img card--overlay-content data-webm=<%= sufia.download_path(video, datastream_id: 'webm') %> data-mp4=<%= sufia.download_path(video, datastream_id: 'mp4') %> data-title=<%= video.title.first %>
+           data-description=<%= video.description %> data-description=<%= video.venue_name %>">
+           <div class="card-figure-img">
+              <div class="card-figure-img-wrapper">
+                <img src="<%= sufia.download_path(video, datastream_id: 'thumbnail') %>" alt="<%= video.title.first %>" />
+              </div>
+            </div>
+          <div class="card__content">
+            <h3 class="card__content__title">
+              <%= video.title.first %>
+            </h3>
+            <h4 class="card__content_subtitle">
+              <%= video.venue_name.first %>
+            </h4>
+            <p class="card__content__date">
+              <%= video.date_created.first %>
+            </p>
+          </div>
+        </a>
+      </li>
+    <% end %>
   </ul>
   <div class="paging">
     if hasNextPage
