--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -36,22 +36,20 @@
     </div>
     <section class="slideshow">
       <ul>
-        = group
-          = each model.data
-            li
-              figure
-                img.slideshow-img src="#{OsfArchivesWeb.API_HOST}#{url}" alt=title
-              figcaption
-                h3
-                  =metadata.title
-                p
-                  =metadata.production_name
-                p
-                  =metadata.venue_name
-                p
-                  =metadata.description
-                p
-                  =metadata.date_created
+        <% @files["Image"].each do |image| %>
+          <li>
+            <figure>
+              <img class="slideshow-img" src="<%= sufia.download_path(image) %>" alt="<%= image.title.first %>" />
+              <figcaption>
+                <h3><%= image.title.first %></h3>
+                <p><%= image.production_name.first %></p>
+                <p><%= image.venue_name.first %></p>
+                <p><%= image.description.first %></p>
+                <p><%= image.date_created.first %></p>
+              </figcaption>
+            </figure>
+          </li>
+        <% end %>
       </ul>
       <nav>
         <span class="icon nav-prev" />
