Extract partials out of the main layout

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -9,120 +9,8 @@
   <%= stylesheet_link_tag   'client', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'client', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <!-- <link rel="stylesheet" href="assets/client.css"> -->
 </head>
 <body>
-  <div class="sidebar-container"></div>
-  <div class="page-container">
-    <header class="header-primary" style="background-image: url('assets/header-bg-richard.jpg');">
-      <div class="header-logo">
-        <img src="assets/osf-logo.png" alt="Oregon Shakespeare Festival" />
-      </div>
-      <nav class="nav-primary">
-        <a class="nav-primary__link" href="#">Connect With Us</a>
-        <a class="nav-primary__link" href="#">Plan Your Visit</a>
-        <a class="nav-primary__link" href="#">Give and Join</a>
-        <a class="nav-primary__link btn-primary" href="#">Buy Tickets</a>
-      </nav>
-      <h1 class="page-title">Welcome to the Archive</h1>
-      <div class="search-the-archive">
-        <input class="js-search" placeholder="What are you looking for?" autofocus=true action="search" insert-newline="search">
-        <button class="btn-primary" type="button">Search</button>
-      </div>
-    </header>
-    <div class="search-filters">
-      <div class="row">
-        <div class="section-container">
-          <div class="col-1-2">
-            <div class="search-filter filter-works">
-              <div class="search-filter-inner">
-                <h3 class="filter-title">Work</h3>
-                <select class="works-list">
-                  <option>Select a work</option>
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="col-1-2">
-            <div class="search-filter filter-venues">
-              <div class="search-filter-inner">
-                <h3 class="filter-title">Venue</h3>
-                <ul class="js-filters filter-list">
-                  <li class="filter-venue-item">
-                    <a class='active' data-type='Elizabethan'>Elizabethan</a>
-                  </li>
-
-                  <li class="filter-venue-item">
-                    <a class='active' data-type='Thomas'>Thomas</a>
-                  </li>
-                  <li class="filter-venue-item">
-                    <a class='active' data-type='Angus Bowmer'>Angus Bowmer</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="section-container">
-          <div class="col-1-2">
-            <div class="search-filter filter-types">
-              <div class="search-filter-inner">
-                <h3 class="filter-title">File Type</h3>
-                <ul class="js-filters filter-list">
-                  <li class="filter-type-item">
-                    <a class='file-type active' data-type='images' data-per-page='15'>Images</a>
-                  </li>
-                  <li class="filter-type-item">
-                    <a class='file-type active' data-type='videos'>Vidoes</a>
-                  </li>
-                  <li class="filter-type-item">
-                    <a class='file-type active' data-type='audios'>Audios</a>
-                  </li>
-                  <li class="filter-type-item">
-                    <a class='file-type active' data-type='articles'>Documents</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-1-2">
-            <div class="search-filter filter-year">
-              <div class="search-filter-inner">
-                <h3 class="filter-title">Year Range</h3>
-                <input class="js-year-range" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="main-content-region">
-      <div class="container">
-        <%= render 'searches/images' %>
-        <%= render 'searches/videos' %>
-        <%= render 'searches/audios' %>
-        <%= render 'searches/articles' %>
-      </div>
-    </div>
-    <footer />
-  </div>
-
-  <script type="text/javascript">
-    $(function(){
-      $('.js-year-range').ionRangeSlider({
-        type: "double",
-        min: "1935",
-        max: "2015",
-        hide_min_max: true,
-        step: 1 //,
-        // onFinish: function () {
-        //   that.set('target', that.controller.get('target'));
-        //   that.send('search');
-        // }
-      });
-    });
-  </script>
+  <%= yield %>
 </body>
 </html>
