--- a/app/views/searches/_header.html.erb
+++ b/app/views/searches/_header.html.erb
@@ -10,7 +10,9 @@
   </nav>
   <h1 class="page-title">Welcome to the Archive</h1>
   <div class="search-the-archive">
-    <input class="js-search" placeholder="What are you looking for?" autofocus=true action="search" insert-newline="search">
-    <button class="btn-primary" type="button">Search</button>
+    <%= form_tag(searches_path, method: "get") do %>
+      <%= search_field_tag(:q, nil, placeholder: "What are you looking for?", autofocus: true) %>
+      <%= submit_tag("Search", name: nil, class: "btn-primary") %>
+    <% end %>
   </div>
 </header>
