Images open in a slideshow

--- a/app/views/layouts/client.html.erb
+++ b/app/views/layouts/client.html.erb
@@ -122,6 +122,8 @@
         //   that.send('search');
         // }
       });
+
+      new CBPGridGallery(document.getElementById('grid-gallery'));
     });
   </script>
 </body>
