--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -52,9 +52,9 @@
         <% end %>
       </ul>
       <nav>
-        <span class="icon nav-prev" />
-        <span class="icon nav-next" />
-        <span class="icon nav-close" />
+        <span class="icon nav-prev"></span>
+        <span class="icon nav-next"></span>
+        <span class="icon nav-close"></span>
       </nav>
       <div class="info-keys icon">Navigate with arrow keys</div>
   </div>
