--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -21,7 +21,10 @@
       //   that.send('search');
       // }
     });
-
+    // Init the image gallery
     new CBPGridGallery(document.getElementById('grid-gallery'));
+
+    // Init the video viewer
+    VideoGrid.init();
   });
 </script>
