Set both credit name and id on files

--- a/app/views/searches/_images.html.erb
+++ b/app/views/searches/_images.html.erb
@@ -42,8 +42,8 @@
               <img class="slideshow-img" src="<%= sufia.download_path(image) %>" alt="<%= image.title.first %>" />
               <figcaption>
                 <h3><%= image.title.first %></h3>
-                <p><%= image.production_name.first %></p>
-                <p><%= image.venue_name.first %></p>
+                <p><%= image.production_name %></p>
+                <p><%= image.venue_name %></p>
                 <p><%= image.description.first %></p>
                 <p><%= image.date_created.first %></p>
               </figcaption>
