--- a/app/views/searches/_videos.html.erb
+++ b/app/views/searches/_videos.html.erb
@@ -19,7 +19,7 @@
               <%= video.title.first %>
             </h3>
             <h4 class="card__content_subtitle">
-              <%= video.venue_name.first %>
+              <%= video.venue_name %>
             </h4>
             <p class="card__content__date">
               <%= video.date_created.first %>
