--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -1,8 +1,10 @@
 <div class="sidebar-container"></div>
 
 <div class="page-container">
-  <%= render "header" %>
-  <%= render "filters" %>
+  <%= form_tag(searches_path, method: "get") do %>
+    <%= render "header" %>
+    <%= render "filters" %>
+  <% end %>
   <%= render "search_results" %>
 
   <footer />
