Filter by work_name
Filtering by work_id doesn’t seem to work.  We might need to index by
id in Solr, but then we might id namespace conflicts probably.

* Moving towards `FileSearch` becoming a form object, but not going all
the way there yet.
* We submit the form as soon as a work selection is made.
* We re-populate the search field and work with the same values as we
searched with

--- a/app/views/searches/_filters.html.erb
+++ b/app/views/searches/_filters.html.erb
@@ -5,9 +5,11 @@
         <div class="search-filter filter-works">
           <div class="search-filter-inner">
             <h3 class="filter-title">Work</h3>
-            <select class="works-list">
-              <option>Select a work</option>
-            </select>
+            <%= select_tag "work",
+                   options_from_collection_for_select(@works, "title", "title", @search.work_name),
+                   prompt: "Select a work",
+                   class: "works-list",
+                   onchange: "this.form.submit();" %>
           </div>
         </div>
       </div>
