[WIP] Filter by venue
* This mostly works, but can’t find a file with a venue name with
spaces in it.  Not sure why that is yet.

* Real images and some styling work are still required as well.

* The styles we put on the select element do not carry through to the
ul element that image-picker inserts.  We’ll need to figure something
out there.

--- a/app/views/searches/_filters.html.erb
+++ b/app/views/searches/_filters.html.erb
@@ -17,18 +17,17 @@
         <div class="search-filter filter-venues">
           <div class="search-filter-inner">
             <h3 class="filter-title">Venue</h3>
-            <ul class="js-filters filter-list">
-              <li class="filter-venue-item">
-                <a class='active' data-type='Elizabethan'>Elizabethan</a>
-              </li>
-
-              <li class="filter-venue-item">
-                <a class='active' data-type='Thomas'>Thomas</a>
-              </li>
-              <li class="filter-venue-item">
-                <a class='active' data-type='Angus Bowmer'>Angus Bowmer</a>
-              </li>
-            </ul>
+            <%= select_tag "venues[]",
+                  options_for_select(@venues.map { |venue|
+                    [
+                      venue.name,
+                      {
+                        "data-img-src" => "http://dummyimage.com/40x40/000/fff&text=#{venue.name}",
+                        "data-img-label" => venue.name,
+                        class: "filter-venue-item" }]
+                    }, @search.venue_names),
+                  class: "js-venue-list filter-list",
+                  multiple: "multiple" %>
           </div>
         </div>
       </div>
