--- a/app/views/searches/_filters.html.erb
+++ b/app/views/searches/_filters.html.erb
@@ -59,7 +59,13 @@
         <div class="search-filter filter-year">
           <div class="search-filter-inner">
             <h3 class="filter-title">Year Range</h3>
-            <input class="js-year-range" />
+            <input class="js-year-range"
+                   name="years"
+                   data-min="<%= @search.year_range_limit.begin %>"
+                   data-max="<%= @search.year_range_limit.end %>"
+                   data-from="<%= @search.year_range.begin %>"
+                   data-to="<%= @search.year_range.end %>"
+                   />
           </div>
         </div>
       </div>
