--- a/app/views/searches/_articles.html.erb
+++ b/app/views/searches/_articles.html.erb
@@ -1,5 +1,4 @@
-<% if @results.has_articles? %>
-<section class="results-section articles is-active" data-total-items='1'>
+<section class="results-section articles <%= (@results.has_articles? && @search.show_articles?) ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class='file-type active' data-type='articles'>Articles</a>
     <p class="file-type-count"><%= @results.article_count %></p>
@@ -24,10 +23,9 @@
       </li>
     <% end %>
   </div>
-  <div class="paging">
+  <!-- <div class="paging">
     if hasNextPage
       a{action 'page' 'articles' 1} href="#"
         | More
-  </div>
+  </div> -->
 </section>
-<% end %>
