--- a/app/views/searches/_filters.html.erb
+++ b/app/views/searches/_filters.html.erb
@@ -6,7 +6,7 @@
           <div class="search-filter-inner">
             <h3 class="filter-title">Work</h3>
             <%= select_tag "work",
-                   options_from_collection_for_select(@works, "title", "title", @search.work_name),
+                   options_from_collection_for_select(@search.all_works, "title", "title", @search.work_name),
                    prompt: "Select a work",
                    class: "works-list",
                    onchange: "this.form.submit();" %>
@@ -18,7 +18,7 @@
           <div class="search-filter-inner">
             <h3 class="filter-title">Venue</h3>
             <%= select_tag "venues[]",
-                  options_for_select(@venues.map { |venue|
+                  options_for_select(@search.all_venues.map { |venue|
                     [
                       venue.name,
                       {
@@ -38,20 +38,18 @@
         <div class="search-filter filter-types">
           <div class="search-filter-inner">
             <h3 class="filter-title">File Type</h3>
-            <ul class="js-filters filter-list">
-              <li class="filter-type-item">
-                <a class='file-type active' data-type='images' data-per-page='15'>Images</a>
-              </li>
-              <li class="filter-type-item">
-                <a class='file-type active' data-type='videos'>Vidoes</a>
-              </li>
-              <li class="filter-type-item">
-                <a class='file-type active' data-type='audios'>Audios</a>
-              </li>
-              <li class="filter-type-item">
-                <a class='file-type active' data-type='articles'>Documents</a>
-              </li>
-            </ul>
+            <%= select_tag "record_types[]",
+                  options_for_select(@search.all_record_types.map { |type|
+                    [
+                      type,
+                      {
+                        "data-img-src" => image_path("icons/icons-file-type.png"),
+                        class: "filter-type-item file-type"
+                      }
+                    ]
+                    }, @search.record_types),
+                    class: "js-type-list filter-list",
+                    multiple: "multiple" %>
           </div>
         </div>
       </div>
@@ -61,8 +59,8 @@
             <h3 class="filter-title">Year Range</h3>
             <input class="js-year-range"
                    name="years"
-                   data-min="<%= @search.year_range_limit.begin %>"
-                   data-max="<%= @search.year_range_limit.end %>"
+                   data-min="<%= @search.all_years.begin %>"
+                   data-max="<%= @search.all_years.end %>"
                    data-from="<%= @search.year_range.begin %>"
                    data-to="<%= @search.year_range.end %>"
                    />
