--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -19,6 +19,11 @@
       }
     });
 
+    $('.js-type-list').imagepicker({
+      show_label: false //,
+      // changed: updateSelectionState
+    });
+
     $('.js-year-range').ionRangeSlider({
       type: "double",
       hide_min_max: true,
