--- a/app/assets/stylesheets/modules/_search-filters.scss
+++ b/app/assets/stylesheets/modules/_search-filters.scss
@@ -51,6 +51,19 @@
   box-shadow: inset 0 10px 10px 0 rgba(206,205,205, 0.2);
 }
 
+.filter-venues {
+  color: #757575;
+  font-size: 13px;
+
+  .image_picker_image {
+    display: none;
+  }
+
+  .selected {
+    color: blue;
+  }
+}
+
 .filter-types {
   list-style-type: none;
 
