--- a/app/views/searches/_filters.html.erb
+++ b/app/views/searches/_filters.html.erb
@@ -22,7 +22,7 @@
                     [
                       venue.name,
                       {
-                        "data-img-src" => "http://dummyimage.com/40x40/000/fff&text=#{venue.name}",
+                        "data-img-src" => image_path("icons/icon-#{venue.name.parameterize}"),
                         class: "filter-venue-item" }]
                     }, @search.venue_names),
                   class: "js-venue-list",
