--- a/app/assets/stylesheets/modules/_search-filters.scss
+++ b/app/assets/stylesheets/modules/_search-filters.scss
@@ -51,30 +51,6 @@
   box-shadow: inset 0 10px 10px 0 rgba(206,205,205, 0.2);
 }
 
-.filter-venues {
-  color: #757575;
-  font-size: 13px;
-
-  .image_picker_image {
-    display: none;
-  }
-
-  .selected {
-    color: blue;
-  }
-}
-
-.filter-types {
-  list-style-type: none;
-
-  .selected {
-    img {
-      filter: grayscale(0%);
-      opacity: 1;
-    }
-  }
-}
-
 // Needed for ImagePicker plugin
 .image_picker_selector {
   @extend %clearfix;
@@ -98,25 +74,43 @@
   }
 }
 
+.filter-venues {
+  color: #757575;
+  font-size: 13px;
 
-.filter-venue-item {
-  float: left;
-  margin-right: 15px;
-
-  a {
-    color: lighten($neutral-dark-mid, 40%);
-    cursor: pointer;
-    font-size: 14px;
-
-    &:hover {
-      color: lighten($neutral-dark-mid, 20%);
+  .image_picker_selector {
+    li {
+      margin-right: 8px;
     }
 
-    &.active {
-      color: #cf794e;
+    p {
+      background-color: #aeaeae;
+      border-radius: 3px;
+      color: #fff;
+      padding: 3px 5px;
+    }
+  }
+
+  .image_picker_image {
+    display: none;
+  }
+
+  .selected p {
+    background-color: #b64c30;
+  }
+}
+
+.filter-types {
+  list-style-type: none;
+
+  .selected {
+    img {
+      filter: grayscale(0%);
+      opacity: 1;
     }
   }
 }
+
 
 .file-type {
   cursor: pointer;
