--- a/app/views/searches/_audios.html.erb
+++ b/app/views/searches/_audios.html.erb
@@ -1,13 +1,13 @@
-<section class="results-section audios <%= (@results.has_audios? && @search.show_audios?) ? "is-active" : "" %>">
+<section class="results-section audios <%= @audios.any? ? "is-active" : "" %>">
   <div class="sidebar-item">
     <a class="file-type">
       <%= image_tag("icons/icon-audios", alt: "Audios", class: "filter-type-image") %>
     </a>
-    <p class="file-type-count"><%= @results.audio_count %></p>
+    <p class="file-type-count"><%= @audios.size %></p>
   </div>
   <h2 class="results-section-title">Audio</h2>
   <div>
-    <% @results.audios.each do |audio| %>
+    <% @audios.each do |audio| %>
       <img src="<%= sufia.download_path(audio, datastream_id: 'thumbnail') %>" alt="<%= audio.title.first %>" />
       <audio controls="controls">
         <source src="<%= sufia.download_path(audio) %>" />
