--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -5,6 +5,7 @@
         <ul class="nav navbar-nav">
             <li <%= 'class=active' if current_page?(root_path) %>><a href="/" >Home</a></li>
                 <li <%= 'class=active' if current_page?(sufia.about_path) %>><a href="/about/" >About</a></li>
+                <li <%= 'class=active' if current_page?(admin_policies_path) %>><a href="<%= admin_policies_path %>">Policies</a></li>
                 <li <%= 'class=active' if action_name == "help" %>><a href="/help/" >Help</a></li>
             <li <%= 'class=active' if current_page?(sufia.contact_path) %>><a href="<%= sufia.contact_form_index_path %>" >Contact</a></li>
         </ul><!-- /.nav -->
