--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -6,8 +6,7 @@
     <%= render "filters" %>
   <% end %>
   <%= render "search_results" %>
-
-  <footer />
+  <%= render "footer" %>
 </div>
 
 <script type="text/javascript">
